--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -4,13 +4,18 @@ sp:
 
 spring:
   application:
-    name: User-service
- 
+    name: user-service
+    
 server:
   port: 8101
-
- 
+  
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka1:2001/eureka
+      defaultZone: http://eureka1:2001/eureka, http://eureka1:2002/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
